force-app/main/default/objects/Activity/fields/sugati__Preference__c.field-meta.xml
<CustomField>
    <fullName>sugati__Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preference</label>
    <referenceTo>sugati__Holiday_Question__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>