force-app/main/default/objects/Activity/fields/sugati__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Record_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom Record Type</description>
    <inlineHelpText>Custom Record Type</inlineHelpText>
    <label>Record Type</label>
    <referenceTo>sugati__Record_Type__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>